# djtutproj

./: .gitignore  README.md  docker-compose.yml  manage.py  openapi-schema.yml  pyproject.toml  renovate.json
djtutapp/: apps.py  models.py  serializers.py  urls.py  views.py
djtutapp/migrations/: 0001_initial.py  0002_student.py
djtutapp/templates/: index.html
djtutproj/: asgi.py  settings.py  urls.py  wsgi.py
polls/: urls.py  views.py
polls/migrations/: 0001_initial.py  0002_alter_question_pub_date.py
polls/templates/polls/: detail.html  htmx_detail.html  index.html
theme/static_src/: package-lock.json
theme/templates/: base.html
